# mlflow-tutorial

./: .gitignore  MLproject  README.md  dvc.yaml  evaluation.json  mypy.ini  params.yaml  pyproject.toml  tox.ini
.dvc/: config
data/: .gitignore  winequality-red.csv.dvc
dvc_plots/: index.html
dvc_tutorial/: evaluate.py  featurization.py  train.py
evaluation/: .gitignore
evaluation/plots/: confusion_matrix.json  precision_recall.json  roc.json
examples/: 2.py  3.py  4.py  5.py
examples/test/: test_ex.py
mlflow_examples/: _2.py  _3.py  _4.py  _5.py
mlflow_examples/test/: test_ex.py
