[tool.poetry]
name = "mlflow-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
mlflow = "^1.29.0"
scikit-learn = "^1.1.2"
torch = "^1.12.1"
pandas = "^1.5.0"
pydantic = "^1.10.2"
sklearn-stub = "^0.0.3"
pytest = "^7.1.3"
coverage = "^6.4.4"
tox = "^3.26.0"
matplotlib = "^3.6.0"
xgboost = "^1.6.2"
shap = "^0.41.0"
dvclive = "^0.11.0"
scipy = "^1.9.1"
pyaml = "^21.10.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
mypy = "^0.971"
types-setuptools = "^57.4.10"
types-tzlocal = "^4.1.0"
types-simplejson = "^3.17.3"
types-certifi = "^2021.10.8"
types-pyOpenSSL = "^22.0.0"
types-chardet = "^5.0.4"
types-python-dateutil = "^2.8.9"
types-redis = "^4.1.17"
types-requests = "^2.27.12"
pandas-stubs = "^1.5.0"
isort = "^5.10.1"
tox = "^3.26.0"
ipykernel = "^6.16.0"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
