[tool.poetry]
name = "mlflow-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
mlflow = "^1.29.0"
scikit-learn = "^1.1.2"
torch = "^1.12.1"
pandas = "^1.5.0"
pydantic = "^1.10.2"
pytest = "^7.1.3"
coverage = "^6.4.4"
tox = "^3.26.0"
matplotlib = "^3.6.0"
xgboost = "^1.6.2"
shap = "^0.41.0"
scipy = "^1.9.1"
pyaml = "^21.10.1"
dvc = "^2.42.0"
dvc-gdrive = "^2.19.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
mypy = "^0.971"
isort = "^5.10.1"
tox = "^3.26.0"
ipykernel = "^6.16.0"

[tool.black]
line-length = 80
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
